--- a/scripts/nullblock-dev.yml
+++ b/scripts/nullblock-dev.yml
@@ -7,18 +7,24 @@ windows:
       layout: tiled
       panes:
         - |
-          echo "📊 LM Studio Log Stream"
-          echo "Monitoring LM Studio server logs..."
+          echo "🌐 OpenRouter API Logs"
+          echo "Monitoring OpenRouter API usage and agent requests..."
           echo "Press Ctrl+C to stop"
           echo ""
-          echo "📊 Monitoring LM Studio server logs..."
           mkdir -p logs
-          while true; do 
-            echo "$(date '+%Y-%m-%d %H:%M:%S') [LM-STUDIO-STREAM] Starting log stream capture" | tee -a logs/lm-studio-stream.log
-            lms log stream 2>/dev/null | tee -a logs/lm-studio-stream.log || echo "⚠️  No recent log files found in LM Studio server logs" | tee -a logs/lm-studio-stream.log
-            sleep 5
+          touch logs/openrouter-api.log
+          echo "📊 Monitoring OpenRouter API requests..."
+          tail -f logs/openrouter-api.log 2>/dev/null || echo "⚠️ Waiting for OpenRouter API logs..."
+        - |
+          echo "🧠 LLM Service Health Monitor"
+          echo "Monitoring LLM service health and model availability..."
+          echo ""
+          cd svc/nullblock-agents
+          while true; do
+            echo "$(date '+%Y-%m-%d %H:%M:%S') [LLM-HEALTH] Checking model availability..." | tee -a logs/llm-health.log
+            python scripts/health_check.py 2>&1 | tee -a logs/llm-health.log
+            sleep 30
           done
-        - ~/nullblock/scripts/wait-for-lmstudio.sh
         - |
           echo "🎯 Hecate Agent Logs"
           echo "Monitoring Hecate agent server and client logs..."
@@ -132,10 +138,16 @@ windows:
           echo "💡 Use 'tail -f logs/agents.log' to monitor logs"
           hatch run python3 -m agents
         - |
-          echo "🎯 Starting Hecate Agent Server with Dependencies..."
-          echo "📋 This will wait for LM Studio to be ready before starting Hecate"
+          echo "🎯 Starting Hecate Agent Server with OpenRouter..."
+          echo "📋 Using OpenRouter for LLM services (no local dependencies)"
           echo ""
-          exec ~/nullblock/scripts/start-hecate-with-deps.sh
+          cd svc/nullblock-agents
+          mkdir -p logs
+          export HECATE_PORT=9002
+          echo "🚀 Starting Hecate agent server on port 9002..."
+          echo "📝 Logs will be written to logs/hecate-server.log"
+          echo "🌐 Using OpenRouter API for model access"
+          hatch run python -m agents.hecate.server 2>&1 | tee logs/hecate-server.log
 
   - frontend:
       panes:
@@ -154,21 +166,46 @@ windows:
   - llm:
       layout: even-horizontal
       panes:
-        - ~/nullblock/scripts/start-lmstudio.sh
         - |
-          echo "Waiting for LM Studio server to start..."
-          sleep 10
-          echo "📊 Starting log monitoring..."
-          echo "Press Ctrl+C to stop"
+          echo "🌐 OpenRouter Integration Status"
+          echo "Monitoring OpenRouter API connectivity and model availability..."
           echo ""
-          echo "📊 Monitoring LM Studio server logs..."
           mkdir -p logs
-          while true; do 
-            echo "$(date '+%Y-%m-%d %H:%M:%S') [LM-STUDIO-STREAM] Starting log stream capture" | tee -a logs/lm-studio-stream.log
-            lms log stream 2>/dev/null | tee -a logs/lm-studio-stream.log || echo "⚠️  No recent log files found in LM Studio server logs" | tee -a logs/lm-studio-stream.log
-            sleep 5
+          touch logs/openrouter-status.log
+          echo "✅ OpenRouter is cloud-based - no local server needed"
+          echo "🔑 API Key configured via .env.dev"
+          echo "📊 Available models:"
+          echo "   - deepseek/deepseek-chat-v3.1:free (default, $0.00)"
+          echo "   - deepseek/deepseek-r1 (reasoning, ~$0.0014)"
+          echo "   - openai/gpt-4o (premium, ~$0.005)"
+          echo "   - anthropic/claude-3.5-sonnet (premium, ~$0.003)"
+          echo ""
+          echo "📡 Testing OpenRouter connectivity..."
+          cd svc/nullblock-agents
+          python scripts/health_check.py | tee logs/openrouter-status.log
+        - |
+          echo "🧠 Model Performance Monitor"
+          echo "Real-time monitoring of LLM requests and costs..."
+          echo ""
+          cd svc/nullblock-agents
+          mkdir -p logs
+          while true; do
+            echo "$(date '+%Y-%m-%d %H:%M:%S') [MODEL-PERF] Checking usage stats..." | tee -a logs/model-performance.log
+            python scripts/get_stats.py 2>&1 | tee -a logs/model-performance.log
+            sleep 60
           done
-        - ~/nullblock/scripts/wait-for-lmstudio.sh
+        - |
+          echo "🔍 Reasoning Tokens Monitor"
+          echo "Monitoring reasoning model usage and token consumption..."
+          echo ""
+          cd svc/nullblock-agents
+          mkdir -p logs
+          touch logs/reasoning-monitor.log
+          echo "🧠 Reasoning models available:"
+          python scripts/get_reasoning_models.py | tee logs/reasoning-monitor.log
+          echo ""
+          echo "📊 Monitor logs: tail -f logs/reasoning-monitor.log"
+          tail -f logs/reasoning-monitor.log 2>/dev/null || echo "⚠️ Waiting for reasoning logs..."
 
 on_project_start: |
   if [ ! -f .env.dev ]; then
@@ -186,16 +223,22 @@ on_project_start: |
   mkdir -p svc/hecate/logs
   echo "✅ Log directories created with archival support"
   echo "🚀 Nullblock development environment ready!"
-  echo "🤖 Agents tab: General agents (9001) + Hecate server (9002) with comprehensive logging"
+  echo "🤖 Agents tab: General agents (9001) + Hecate server (9002) with OpenRouter integration"
   echo "🌐 Frontend connects to Hecate agent for chat functionality"
+  echo "🧠 LLM tab: OpenRouter API monitoring + reasoning tokens + model performance"
   echo "📝 All services now have persistent log files with rotation"
-  echo "💡 Unified logs tab shows last 15 minutes by default"
+  echo "💡 Unified logs tab shows OpenRouter API usage and agent logs"
   echo "🗂️  Log locations:"
-  echo "   - Main: logs/"
-  echo "   - Agents: svc/nullblock-agents/logs/"
+  echo "   - Main: logs/ (OpenRouter API, health checks)"
+  echo "   - Agents: svc/nullblock-agents/logs/ (Hecate, LLM service, reasoning)"
   echo "   - MCP: svc/nullblock-mcp/logs/"
   echo "   - Orchestration: svc/nullblock-orchestration/logs/"
   echo "   - Erebus: svc/erebus/logs/"
+  echo "📊 OpenRouter Models:"
+  echo "   - DeepSeek Chat Free (default): $0.00 per request"
+  echo "   - DeepSeek-R1 (reasoning): ~$0.0014 per request"
+  echo "   - GPT-4o (premium): ~$0.005 per request"
+  echo "   - Claude 3.5 Sonnet (premium): ~$0.003 per request"
 
 on_project_stop: |
   echo "Stopping development services..."
