--- a/.env.dev
+++ b/.env.dev
@@ -38,3 +38,7 @@ HELIOS_PORT=5000
 # Erebus Configuration
 EREBUS_HOST=127.0.0.1
 EREBUS_PORT=3000
+
+# Open Router API Key
+# nullblock_1_hecate
+OPENROUTER_API_KEY="REDACTED_OPENROUTER_KEY_5"
