--- a/scripts/nullblock-dev.yml
+++ b/scripts/nullblock-dev.yml
@@ -33,6 +33,23 @@ windows:
           touch svc/nullblock-agents/logs/hecate-server.log
           tail -f svc/nullblock-agents/logs/hecate-server.log 2>/dev/null || echo "⚠️ Waiting for Hecate logs..."
         - |
+          echo "💬 Chat Conversations"
+          echo "Real-time monitoring of chat conversations with Hecate..."
+          echo "View your conversations and model responses as they happen"
+          echo ""
+          mkdir -p svc/nullblock-agents/logs/chats
+          touch svc/nullblock-agents/logs/chats/hecate-chat.log
+          echo "📝 Monitoring chat log: logs/chats/hecate-chat.log"
+          tail -f svc/nullblock-agents/logs/chats/hecate-chat.log 2>/dev/null || echo "⚠️ Waiting for chat conversations..."
+        - ~/nullblock/scripts/health-monitor.sh
+        - |
+          echo "🌐 MCP Server Logs"
+          echo "Monitoring MCP server logs..."
+          echo ""
+          mkdir -p svc/nullblock-mcp/logs
+          touch svc/nullblock-mcp/logs/mcp-server.log
+          tail -f svc/nullblock-mcp/logs/mcp-server.log 2>/dev/null || echo "⚠️ Waiting for MCP logs..."
+        - |
           echo "🔗 Erebus Server Logs"
           echo "Monitoring Erebus wallet server logs..."
           echo ""
@@ -42,14 +59,6 @@ windows:
           touch "$LOG_FILE"
           echo "📝 Tailing: $LOG_FILE"
           tail -f "$LOG_FILE" 2>/dev/null || echo "⚠️ Waiting for Erebus logs..."
-        - |
-          echo "🌐 MCP Server Logs"
-          echo "Monitoring MCP server logs..."
-          echo ""
-          mkdir -p svc/nullblock-mcp/logs
-          touch svc/nullblock-mcp/logs/mcp-server.log
-          tail -f svc/nullblock-mcp/logs/mcp-server.log 2>/dev/null || echo "⚠️ Waiting for MCP logs..."
-        - ~/nullblock/scripts/health-monitor.sh
 
   - workspace:
       layout: even-horizontal
@@ -217,6 +226,7 @@ on_project_start: |
   echo "📁 Creating comprehensive log directory structure..."
   mkdir -p logs
   mkdir -p svc/nullblock-agents/logs
+  mkdir -p svc/nullblock-agents/logs/chats
   mkdir -p svc/nullblock-mcp/logs
   mkdir -p svc/nullblock-orchestration/logs
   mkdir -p svc/erebus/logs
@@ -227,10 +237,12 @@ on_project_start: |
   echo "🌐 Frontend connects to Hecate agent for chat functionality"
   echo "🧠 LLM tab: OpenRouter API monitoring + reasoning tokens + model performance"
   echo "📝 All services now have persistent log files with rotation"
-  echo "💡 Unified logs tab shows OpenRouter API usage and agent logs"
+  echo "💡 Unified logs tab shows OpenRouter API usage, agent logs, and chat conversations"
+  echo "💬 Chat logs: Real-time conversation monitoring with timestamps and model info"
   echo "🗂️  Log locations:"
   echo "   - Main: logs/ (OpenRouter API, health checks)"
   echo "   - Agents: svc/nullblock-agents/logs/ (Hecate, LLM service, reasoning)"
+  echo "   - Chat conversations: svc/nullblock-agents/logs/chats/ (session logs + main chat.log)"
   echo "   - MCP: svc/nullblock-mcp/logs/"
   echo "   - Orchestration: svc/nullblock-orchestration/logs/"
   echo "   - Erebus: svc/erebus/logs/"
