crossroads skeleton / logo update

--- a/scripts/nullblock-dev.yml
+++ b/scripts/nullblock-dev.yml
@@ -232,6 +232,7 @@ on_project_start: |
   echo "✅ Log directories created with archival support"
   echo "🚀 Nullblock development environment ready!"
   echo "🤖 Agents tab: General agents (9001) + Hecate server (9002) with OpenRouter integration"
+  echo "🛣️  Crossroads: Marketplace and discovery integrated into Erebus (port 3000)"
   echo "🌐 Frontend connects to Hecate agent for chat functionality"
   echo "🧠 LLM tab: OpenRouter API monitoring + reasoning tokens + model performance"
   echo "📝 All services now have persistent log files with rotation"
@@ -243,7 +244,7 @@ on_project_start: |
   echo "   - Chat conversations: svc/nullblock-agents/logs/chats/ (session logs + main chat.log)"
   echo "   - MCP: svc/nullblock-mcp/logs/"
   echo "   - Orchestration: svc/nullblock-orchestration/logs/"
-  echo "   - Erebus: svc/erebus/logs/"
+  echo "   - Erebus: svc/erebus/logs/ (includes Crossroads marketplace)"
   echo "📊 OpenRouter Models:"
   echo "   - DeepSeek Chat Free (default): $0.00 per request"
   echo "   - DeepSeek-R1 (reasoning): ~$0.0014 per request"
