--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -41,10 +41,13 @@
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "postcss": "^8.4.35",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.0",
+    "rehype-highlight": "^7.0.2",
     "tailwindcss": "^3.4.1",
     "three": "^0.163.0"
   },
@@ -59,6 +62,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "18.19.6",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
