--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -29,6 +29,7 @@
     "@splinetool/loader": "^1.0.93",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.93",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@wallet-standard/react": "^1.0.0",
     "@wallet-standard/solana": "^0.1.0-alpha.4",
     "autoprefixer": "^10.4.18",
@@ -47,6 +48,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.22.0",
+    "react-syntax-highlighter": "^15.6.6",
     "rehype-highlight": "^7.0.2",
     "tailwindcss": "^3.4.1",
     "three": "^0.163.0"
