--- a/scripts/nullblock-dev.yml
+++ b/scripts/nullblock-dev.yml
@@ -17,17 +17,17 @@ windows:
           echo "📝 Monitoring live Rust agent output..."
           tail -f logs/hecate-rust.log 2>/dev/null || echo "⚠️ Waiting for Rust agent logs..."
         - |
-          echo "🧠 Agent Health Monitor"
-          echo "Monitoring Rust agent service health and model status..."
+          echo "🧠 Hecate Agent Health Monitor"
+          echo "Monitoring Rust Hecate agent service health and model status..."
           echo ""
           mkdir -p logs
           while true; do
-            echo "$(date '+%Y-%m-%d %H:%M:%S') [HEALTH] Checking Rust agent..." | tee -a logs/agent-health.log
+            echo "$(date '+%Y-%m-%d %H:%M:%S') [HEALTH] Checking Hecate agent..." | tee -a logs/agent-health.log
             if curl -s --max-time 5 "http://localhost:9003/hecate/health" > /dev/null 2>&1; then
-              echo "$(date '+%Y-%m-%d %H:%M:%S') [HEALTH] ✅ Agent healthy" | tee -a logs/agent-health.log
+              echo "$(date '+%Y-%m-%d %H:%M:%S') [HEALTH] ✅ Hecate agent healthy" | tee -a logs/agent-health.log
               curl -s "http://localhost:9003/hecate/model-status" | jq -r '"Model: " + .current_model + " | Status: " + .status' 2>/dev/null | tee -a logs/agent-health.log
             else
-              echo "$(date '+%Y-%m-%d %H:%M:%S') [HEALTH] ❌ Agent not responding" | tee -a logs/agent-health.log
+              echo "$(date '+%Y-%m-%d %H:%M:%S') [HEALTH] ❌ Hecate agent not responding" | tee -a logs/agent-health.log
             fi
             sleep 30
           done
@@ -141,16 +141,6 @@ windows:
         fi
       panes:
         - |
-          echo "🤖 Starting General Agents Server (Python)..."
-          cd svc/nullblock-agents
-          echo "Installing/updating dependencies with hatch..."
-          hatch -e default run pip install -e .
-          mkdir -p logs
-          export AGENTS_HOST=0.0.0.0
-          export AGENTS_PORT=9001
-          echo "🚀 Starting general agents server on port 9001..."
-          hatch run python3 -m agents
-        - |
           echo "🎯 Starting Hecate Agent Server (Rust)..."
           echo "🦀 High-performance Rust implementation with OpenRouter"
           echo ""
@@ -172,7 +162,6 @@ windows:
           export VITE_MCP_API_URL=http://localhost:8001
           export VITE_EREBUS_API_URL=http://localhost:3000
           export VITE_ORCHESTRATION_API_URL=http://localhost:8002
-          export VITE_AGENTS_API_URL=http://localhost:9001
           export VITE_HECATE_API_URL=http://localhost:9003
           npm run develop
 
@@ -243,7 +232,6 @@ on_project_start: |
   echo "   🌐 Erebus (unified router): http://localhost:3000"
   echo "   🧠 MCP Server: http://localhost:8001"
   echo "   🔄 Orchestration: http://localhost:8002"
-  echo "   🤖 General Agents: http://localhost:9001" 
   echo "   🎯 Hecate Agent (Rust): http://localhost:9003"
   echo "   🎨 Frontend: http://localhost:5173"
   echo ""
@@ -261,7 +249,7 @@ on_project_start: |
   echo "   💻 workspace - Development commands & SDK tools"
   echo "   🏗️  infrastructure - PostgreSQL, Redis, IPFS"
   echo "   🔧 backend - MCP, Orchestration, Erebus services"
-  echo "   🤖 agents - General + Hecate (Rust) agent servers"
+  echo "   🤖 agents - Hecate (Rust) agent server"
   echo "   🎨 frontend - React development server"
   echo "   📊 monitoring - OpenRouter & model performance analytics"
 
