--- a/svc/nullblock-agents/Cargo.toml
+++ b/svc/nullblock-agents/Cargo.toml
@@ -63,10 +63,13 @@ tera = "1.19"
 regex = "1.10"
 
 # Database (optional for conversation history)
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"], optional = true }
 
 # Redis (optional for caching)
 redis = { version = "0.25", features = ["tokio-comp"], optional = true }
+
+# Kafka for event streaming
+rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
 
 [features]
 default = ["postgres", "redis", "prometheus"]
