--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,90 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database for shared state
-  postgres:
+  # PostgreSQL Database for Erebus (Users, Sessions)
+  postgres-erebus:
     image: postgres:15-alpine
-    container_name: nullblock-postgres
+    container_name: nullblock-postgres-erebus
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: erebus
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres_secure_pass
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./scripts/db-init:/docker-entrypoint-initdb.d
+      - postgres_erebus_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5440:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # PostgreSQL Database for Agents (Tasks, Agents, User References)
+  postgres-agents:
+    image: postgres:15-alpine
+    container_name: nullblock-postgres-agents
+    environment:
+      POSTGRES_DB: agents
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres_secure_pass
+    volumes:
+      - postgres_agents_data:/var/lib/postgresql/data
+    ports:
+      - "5441:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # PostgreSQL Database for MCP Server
+  postgres-mcp:
+    image: postgres:15-alpine
+    container_name: nullblock-postgres-mcp
+    environment:
+      POSTGRES_DB: mcp
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres_secure_pass
+    volumes:
+      - postgres_mcp_data:/var/lib/postgresql/data
+    ports:
+      - "5442:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # PostgreSQL Database for Orchestration
+  postgres-orchestration:
+    image: postgres:15-alpine
+    container_name: nullblock-postgres-orchestration
+    environment:
+      POSTGRES_DB: orchestration
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres_secure_pass
+    volumes:
+      - postgres_orchestration_data:/var/lib/postgresql/data
+    ports:
+      - "5443:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # PostgreSQL Database for Analytics/Metrics
+  postgres-analytics:
+    image: postgres:15-alpine
+    container_name: nullblock-postgres-analytics
+    environment:
+      POSTGRES_DB: analytics
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres_secure_pass
+    volumes:
+      - postgres_analytics_data:/var/lib/postgresql/data
+    ports:
+      - "5444:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 30s
@@ -53,6 +124,50 @@ services:
       timeout: 10s
       retries: 5
 
+  # Zookeeper for Kafka coordination
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: nullblock-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
+      - zookeeper_logs:/var/lib/zookeeper/log
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "2181"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # Kafka for event streaming
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    container_name: nullblock-kafka
+    depends_on:
+      zookeeper:
+        condition: service_healthy
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    volumes:
+      - kafka_data:/var/lib/kafka/data
+    healthcheck:
+      test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   # Nullblock MCP Server
   nullblock-mcp:
     build:
@@ -60,16 +175,16 @@ services:
       dockerfile: Dockerfile
     container_name: nullblock-mcp
     environment:
-      - DATABASE_URL=postgresql://nullblock:nullblock_secure_pass@postgres:5432/nullblock_mcp
+      - DATABASE_URL=postgresql://postgres:postgres_secure_pass@postgres-mcp:5432/mcp
       - REDIS_URL=redis://redis:6379
       - IPFS_API_URL=http://ipfs:5001
       - FLASHBOTS_RPC_URL=${FLASHBOTS_RPC_URL}
       - WEB3_RPC_URL=${WEB3_RPC_URL}
       - PYTHONPATH=/app
     ports:
-      - "8000:8000"
+      - "8001:8001"
     depends_on:
-      postgres:
+      postgres-mcp:
         condition: service_healthy
       redis:
         condition: service_healthy
@@ -78,7 +193,7 @@ services:
     volumes:
       - ./svc/nullblock-mcp:/app
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -90,20 +205,22 @@ services:
       dockerfile: Dockerfile
     container_name: nullblock-orchestration
     environment:
-      - DATABASE_URL=postgresql://nullblock:nullblock_secure_pass@postgres:5432/nullblock_orchestration
+      - DATABASE_URL=postgresql://postgres:postgres_secure_pass@postgres-orchestration:5432/orchestration
       - REDIS_URL=redis://redis:6379
-      - MCP_SERVER_URL=http://nullblock-mcp:8000
+      - MCP_SERVER_URL=http://nullblock-mcp:8001
       - BITTENSOR_NETWORK=${BITTENSOR_NETWORK:-test}
       - PYTHONPATH=/app
     ports:
-      - "8001:8001"
+      - "8002:8002"
     depends_on:
+      postgres-orchestration:
+        condition: service_healthy
       nullblock-mcp:
         condition: service_healthy
     volumes:
       - ./svc/nullblock-orchestration:/app
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -115,15 +232,20 @@ services:
       dockerfile: Dockerfile
     container_name: nullblock-agents
     environment:
-      - DATABASE_URL=postgresql://nullblock:nullblock_secure_pass@postgres:5432/nullblock_agents
+      - DATABASE_URL=postgresql://postgres:postgres_secure_pass@postgres-agents:5432/agents
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - REDIS_URL=redis://redis:6379
       - MCP_SERVER_URL=http://nullblock-mcp:8000
       - ORCHESTRATION_URL=http://nullblock-orchestration:8001
       - DEX_API_KEYS=${DEX_API_KEYS}
       - PYTHONPATH=/app
     ports:
-      - "8002:8002"
+      - "9003:9003"
     depends_on:
+      postgres-agents:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
       nullblock-mcp:
         condition: service_healthy
       nullblock-orchestration:
@@ -131,7 +253,7 @@ services:
     volumes:
       - ./svc/nullblock-agents:/app
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:9003/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -159,22 +281,31 @@ services:
       - /app/node_modules
     command: npm run develop
 
-  # Erebus Solana Contracts (Rust)
+  # Erebus Unified Router (Rust)
   erebus:
     build:
       context: ./svc/erebus
       dockerfile: Dockerfile
     container_name: nullblock-erebus
     environment:
-      - DATABASE_URL=postgresql://nullblock:nullblock_secure_pass@postgres:5432/nullblock_erebus
+      - DATABASE_URL=postgresql://postgres:postgres_secure_pass@postgres-erebus:5432/erebus
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - REDIS_URL=redis://redis:6379
       - SOLANA_RPC_URL=${SOLANA_RPC_URL:-https://api.devnet.solana.com}
       - RUST_LOG=info
     ports:
-      - "8003:8003"
+      - "3000:3000"
+    depends_on:
+      postgres-erebus:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - ./svc/erebus:/app
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8003/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -199,9 +330,16 @@ services:
       - production
 
 volumes:
-  postgres_data:
+  postgres_erebus_data:
+  postgres_agents_data:
+  postgres_mcp_data:
+  postgres_orchestration_data:
+  postgres_analytics_data:
   redis_data:
   ipfs_data:
+  zookeeper_data:
+  zookeeper_logs:
+  kafka_data:
 
 networks:
   default:
