--- a/svc/erebus/Cargo.toml
+++ b/svc/erebus/Cargo.toml
@@ -17,3 +17,4 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json"] }
 hex = "0.4"
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
