V0 run at crossroads ui

--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -17,7 +17,9 @@
     "ts:check": "tsc --project ./tsconfig.json --skipLibCheck --noemit"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^1.1.1",
     "@lomray/consistent-suspense": "^2.0.2",
+    "@lomray/event-manager": "^2.0.2",
     "@lomray/react-head-manager": "^2.0.2",
     "@lomray/react-mobx-manager": "^3.0.1",
     "@lomray/react-route-manager": "^2.0.0",
@@ -29,6 +31,7 @@
     "@splinetool/loader": "^1.0.93",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.93",
+    "@tanstack/react-query": "^5.90.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@wallet-standard/react": "^1.0.0",
     "@wallet-standard/solana": "^0.1.0-alpha.4",
@@ -51,7 +54,9 @@
     "react-syntax-highlighter": "^15.6.6",
     "rehype-highlight": "^7.0.2",
     "tailwindcss": "^3.4.1",
-    "three": "^0.163.0"
+    "three": "^0.163.0",
+    "viem": "^2.37.12",
+    "wagmi": "^2.17.5"
   },
   "devDependencies": {
     "@actions/core": "^1.10.1",
