--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -42,6 +42,8 @@
     "framer-motion": "^9.0.7",
     "isbot": "^4.4.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "postcss": "^8.4.35",
@@ -68,6 +70,7 @@
     "@semantic-release/exec": "^6.0.3",
     "@types/cookie-parser": "^1.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "18.19.6",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^18.2.48",
