migrations do not overwrite present tables.

--- a/svc/hecate/.env
+++ b/svc/hecate/.env
@@ -1,3 +1,4 @@
 VITE_API_GATEWAY=https://randomuser.me/api
 
 VITE_FAST_API_BACKEND_URL=http://localhost:8000
+VITE_EREBUS_API_URL=http://localhost:3000
