Clean up wallet logic, use sdk.

--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -24,9 +24,14 @@
     "@lomray/react-mobx-manager": "^3.0.1",
     "@lomray/react-route-manager": "^2.0.0",
     "@lomray/vite-ssr-boost": "^2.3.1",
+    "@phantom/react-sdk": "^1.0.0",
     "@phantom/wallet-sdk": "^0.1.1",
     "@react-three/drei": "^9.105.3",
     "@react-three/fiber": "^8.16.1",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.0",
     "@splinetool/loader": "^1.0.93",
     "@splinetool/react-spline": "^2.2.6",
